Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/defaultMethods/Neg06.out
Neg06.java:10:37: compiler.err.missing.ret.stmt
1 error
